--- a/src/login/blockDisplay/FXMLBlockDisplay.fxml
+++ b/src/login/blockDisplay/FXMLBlockDisplay.fxml
@@ -8,8 +8,10 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+
 <!--fx:controller="login.blockDisplay.FXMLBlockDisplayController"-->
-<GridPane fx:id="blockDisplayPane" prefHeight="200.0" prefWidth="400.0" style="-fx-background-color: salmon;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+
+<GridPane fx:id="blockDisplayPane" prefHeight="200.0" prefWidth="400.0" style="-fx-background-color: salmon;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.3333740234375" minWidth="10.0" prefWidth="121.66665395100912" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="353.6666819254557" minWidth="10.0" prefWidth="145.66667938232425" />
@@ -25,7 +27,7 @@
       <Label fx:id="condoAttributeLabel" alignment="CENTER" prefHeight="17.0" prefWidth="135.0" text="Sale : 1,900,900 Baht" GridPane.columnIndex="2" />
       <Label fx:id="areaLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="161.0" text="Sukhumwit/Sukhumwit" GridPane.columnIndex="1" />
       <Label fx:id="salePriceLabel" alignment="CENTER" contentDisplay="TOP" prefHeight="17.0" prefWidth="136.0" text="Cobdo/2Br/2bath" textAlignment="CENTER" />
-      <Label fx:id="rentPriceLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="129.0" text="Rent : 27,000/Month" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+      <Label fx:id="rentPriceLabel" alignment="CENTER" contentDisplay="CENTER" disable="true" prefHeight="17.0" prefWidth="129.0" text="Rent : 27,000/Month" visible="false" GridPane.columnIndex="2" GridPane.rowIndex="1" />
       <JFXButton fx:id="viewMoreButton" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#viewButtonOnClick" prefHeight="9.0" prefWidth="58.0" style="-fx-background-color: black; -fx-background-radius: 60;" text="View &gt;" textFill="#fcf9f9" GridPane.columnIndex="2" GridPane.rowIndex="3">
          <font>
             <Font name="System Bold" size="12.0" />
