--- a/src/login/blockDisplay/FXMLHorizonBar.fxml
+++ b/src/login/blockDisplay/FXMLHorizonBar.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="360.0" prefWidth="397.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="397.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="15.0" layoutY="36.0" prefHeight="28.0" prefWidth="40.0" text="Type :" />
       <Label layoutX="15.0" layoutY="83.0" prefHeight="28.0" prefWidth="54.0" text="Location :" />
@@ -38,5 +40,13 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
+      <ScrollPane layoutX="-2.0" layoutY="342.0" prefHeight="157.0" prefWidth="397.0">
+         <content>
+            <Text fx:id="descriptionText" strokeType="OUTSIDE" strokeWidth="0.0" text="Description Detail -" wrappingWidth="350.0" />
+         </content>
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
+      </ScrollPane>
    </children>
 </AnchorPane>
