--- a/src/login/FXMLRegister.fxml
+++ b/src/login/FXMLRegister.fxml
@@ -11,52 +11,52 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="397.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.FXMLRegisterController">
    <children>
-      <Label layoutX="26.0" layoutY="31.0" text="Register">
+      <Label layoutX="20.0" layoutY="14.0" text="Register">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="24.0" layoutY="85.0" text="Username :">
+      <Label layoutX="18.0" layoutY="55.0" text="Username :">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="24.0" layoutY="123.0" text="Password : ">
+      <Label layoutX="18.0" layoutY="93.0" text="Password : ">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="23.0" layoutY="160.0" text="Re-Pass :">
+      <Label layoutX="17.0" layoutY="130.0" text="Re-Pass :">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="20.0" layoutY="247.0" text="Lastname :">
+      <Label layoutX="14.0" layoutY="217.0" text="Lastname :">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <DatePicker fx:id="birthDatePicker" layoutX="112.0" layoutY="318.0" />
-      <PasswordField fx:id="passwordTextField" layoutX="115.0" layoutY="120.0" prefHeight="25.0" prefWidth="217.0" />
-      <PasswordField fx:id="confirmPWTextField" layoutX="115.0" layoutY="158.0" prefHeight="25.0" prefWidth="217.0" />
-      <Label layoutX="23.0" layoutY="322.0" text="Birth Date : ">
+      <DatePicker fx:id="birthDatePicker" layoutX="106.0" layoutY="288.0" />
+      <PasswordField fx:id="passwordTextField" layoutX="109.0" layoutY="90.0" prefHeight="25.0" prefWidth="217.0" />
+      <PasswordField fx:id="confirmPWTextField" layoutX="109.0" layoutY="128.0" prefHeight="25.0" prefWidth="217.0" />
+      <Label layoutX="17.0" layoutY="292.0" text="Birth Date : ">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="22.0" layoutY="283.0" text="Email : ">
+      <Label layoutX="16.0" layoutY="253.0" text="Email : ">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="23.0" layoutY="208.0" text="Name : ">
+      <Label layoutX="17.0" layoutY="178.0" text="Name : ">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="nameTextField" layoutX="115.0" layoutY="205.0" prefHeight="25.0" prefWidth="217.0" />
-      <TextField fx:id="lastnameTextField" layoutX="114.0" layoutY="244.0" prefHeight="25.0" prefWidth="217.0" />
-      <TextField fx:id="emailTextField" layoutX="107.0" layoutY="280.0" prefHeight="25.0" prefWidth="219.0" />
+      <TextField fx:id="nameTextField" layoutX="109.0" layoutY="175.0" prefHeight="25.0" prefWidth="217.0" />
+      <TextField fx:id="lastnameTextField" layoutX="108.0" layoutY="214.0" prefHeight="25.0" prefWidth="217.0" />
+      <TextField fx:id="emailTextField" layoutX="109.0" layoutY="250.0" prefHeight="25.0" prefWidth="217.0" />
       <JFXButton fx:id="registerButton" buttonType="RAISED" layoutX="303.0" layoutY="358.0" onAction="#registerOnClick" style="-fx-background-color: #dd492e;" text="Register" textFill="#fffefe">
          <font>
             <Font size="14.0" />
@@ -67,13 +67,19 @@
       <Label layoutX="339.0" layoutY="158.0" text="*" textFill="#ea5b4e" />
       <Label layoutX="337.0" layoutY="205.0" text="*" textFill="#ea5b4e" />
       <Label layoutX="335.0" layoutY="246.0" text="*" textFill="#ea5b4e" />
-      <Label layoutX="20.0" layoutY="354.0" text="Gender : ">
+      <Label layoutX="14.0" layoutY="324.0" text="Gender : ">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="329.0" layoutY="284.0" text="*" textFill="#ea5b4e" />
-      <ComboBox fx:id="genderComboBox" layoutX="96.0" layoutY="351.0" prefWidth="150.0" promptText="select gender" />
-      <TextField fx:id="usernameTextField" layoutX="115.0" layoutY="83.0" prefHeight="25.0" prefWidth="217.0" />
+      <Label layoutX="339.0" layoutY="56.0" text="*" textFill="#ea5b4e" />
+      <ComboBox fx:id="genderComboBox" layoutX="90.0" layoutY="321.0" prefWidth="150.0" promptText="select gender" />
+      <TextField fx:id="usernameTextField" layoutX="109.0" layoutY="53.0" prefHeight="25.0" prefWidth="217.0" />
+      <Label layoutX="17.0" layoutY="358.0" text="Phone : ">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="phoneTextField" layoutX="89.0" layoutY="355.0" prefHeight="25.0" prefWidth="181.0" />
    </children>
 </AnchorPane>
