เหลือหน้า delete

--- a/src/login/GraphicCss.css
+++ b/src/login/GraphicCss.css
@@ -1,3 +1,13 @@
+.jfx-tab-pane .headers-region {
+    -fx-background-color: #ff8450;
+}
+.jfx-tab-pane .tab-header-background {
+    -fx-background-color: #ff8450 ;
+}
+/*.jfx-tab-pane .tab-selected-line {
+    -fx-stroke: #75bc1b;
+    -fx-stroke-width: 3pt;
+}*/
 .left-bgcolor{
 
     -fx-background-color: #ff5c5c; 
@@ -25,3 +35,4 @@
     -fx-background-image: url("image/loginButton.png");
     -fx-background-size: cover;
 }
+
