--- a/src/login/blockDisplay/FXMLDetailPage.fxml
+++ b/src/login/blockDisplay/FXMLDetailPage.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="detailPage" prefWidth="397.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="detailPage" prefWidth="397.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.blockDisplay.FXMLDetailPageController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="127.6666259765625" minWidth="10.0" prefWidth="78.66664632161458" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="233.33335367838544" minWidth="10.0" prefWidth="229.33335367838544" />
