--- a/src/login/AdminView/FXMLDataManipulation.fxml
+++ b/src/login/AdminView/FXMLDataManipulation.fxml
@@ -3,14 +3,17 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="519.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.AdminView.FXMLDataManipulationController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="412.0" prefWidth="519.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.AdminView.FXMLDataManipulationController">
    <children>
       <JFXTabPane layoutY="1.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="365.0" prefWidth="520.0" styleClass="jfx-tab-pane" stylesheets="@../GraphicCss.css">
          <tabs>
@@ -38,12 +41,12 @@
                      <content>
                         <TableView fx:id="staffTable" onMouseClicked="#staffTableOnClick" prefHeight="327.0" prefWidth="515.0">
                            <columns>
-                              <TableColumn fx:id="staffIdColumn1" prefWidth="75.0" text="StaffID" />
-                              <TableColumn fx:id="condoNameColumn1" prefWidth="75.0" text="FirstName" />
-                              <TableColumn fx:id="areaColumn1" prefWidth="75.0" text="LastName" />
-                              <TableColumn fx:id="parkingColumn1" prefWidth="75.0" text="Parking" />
-                              <TableColumn fx:id="swimmingColumn1" prefWidth="75.0" text="Swimming" />
-                              <TableColumn fx:id="fitnessColumn1" prefWidth="75.0" text="Fitness" />
+                              <TableColumn fx:id="staffIdColumn" prefWidth="75.0" text="StaffID" />
+                              <TableColumn fx:id="firstNameColumn" prefWidth="75.0" text="FirstName" />
+                              <TableColumn fx:id="lastNameColumn" prefWidth="75.0" text="LastName" />
+                              <TableColumn fx:id="cityColumn" prefWidth="75.0" text="City" />
+                              <TableColumn fx:id="reportToColumn" prefWidth="75.0" text="ReportTo" />
+                              <TableColumn fx:id="positionColumn" prefWidth="97.33331298828125" text="Position" />
                            </columns>
                         </TableView>
                      </content>
@@ -68,9 +71,31 @@
                   </ScrollPane>
                </content>
             </Tab>
-            <Tab fx:id="viewTab" text="View Chart">
+            <Tab fx:id="updateStaff" text="UpdateCondo">
                <content>
-                  <ScrollPane fx:id="viewChartManageScrollPane" prefHeight="200.0" prefWidth="200.0" />
+                  <ScrollPane fx:id="viewChartManageScrollPane" prefHeight="200.0" prefWidth="200.0">
+                     <content>
+                        <AnchorPane prefHeight="353.0" prefWidth="473.0">
+                           <children>
+                              <Label layoutX="30.0" layoutY="8.0" text="Room ID :" />
+                              <Label layoutX="30.0" layoutY="42.0" text="CondoName : " />
+                              <Label layoutX="228.0" layoutY="42.0" text="Picture : " />
+                              <Label layoutX="233.0" layoutY="82.0" text="Price : " />
+                              <Label layoutX="233.0" layoutY="121.0" text="SqMeter : " />
+                              <Label layoutX="30.0" layoutY="82.0" text="Bathroom : " />
+                              <Label layoutX="30.0" layoutY="121.0" text="Bedroom : " />
+                              <TextField fx:id="bathroomTextField" layoutX="108.0" layoutY="78.0" prefHeight="25.0" prefWidth="91.0" />
+                              <ComboBox fx:id="condoNameTextField" layoutX="108.0" layoutY="39.0" prefHeight="25.0" prefWidth="91.0" />
+                              <TextField fx:id="bedroomTextField" layoutX="108.0" layoutY="117.0" prefHeight="25.0" prefWidth="91.0" />
+                              <TextField fx:id="sqMeterTextField" layoutX="288.0" layoutY="117.0" prefHeight="25.0" prefWidth="91.0" />
+                              <TextField fx:id="priceTextField" layoutX="288.0" layoutY="78.0" prefHeight="25.0" prefWidth="91.0" />
+                              <TextArea fx:id="decriptionTextArea" layoutX="30.0" layoutY="177.0" prefHeight="138.0" prefWidth="349.0" />
+                              <Label layoutX="30.0" layoutY="147.0" text="Description" />
+                              <JFXButton layoutX="299.0" layoutY="36.0" onAction="#backButtonOnClick" style="-fx-background-color: grey;" text="Browse" textFill="WHITE" />
+                              <JFXButton fx:id="actionButton" layoutX="299.0" layoutY="328.0" style="-fx-background-color: brown;" text="update/add" textFill="WHITE" />
+                           </children>
+                        </AnchorPane>
+                     </content></ScrollPane>
                </content>
             </Tab>
          </tabs>
@@ -78,7 +103,7 @@
       <JFXButton fx:id="insertButton" buttonType="RAISED" layoutX="290.0" layoutY="366.0" onAction="#insertButtonOnClick" style="-fx-background-color: #dd492e;" text="Insert" textFill="WHITE" />
       <JFXButton fx:id="updateButton" buttonType="RAISED" layoutX="360.0" layoutY="366.0" onAction="#updateButtonOnClick" style="-fx-background-color: #dd492e;" text="Update" textFill="WHITE" />
       <JFXButton fx:id="deleteButton" buttonType="RAISED" layoutX="432.0" layoutY="366.0" onAction="#deleteButtonOnClick" style="-fx-background-color: #dd492e;" text="Delete" textFill="WHITE" />
-      <Label fx:id="idLabel" layoutX="28.0" layoutY="370.0" prefHeight="17.0" prefWidth="51.0" text="CondoID" />
+      <Label fx:id="idLabel" layoutX="16.0" layoutY="370.0" prefHeight="17.0" prefWidth="63.0" text="CondoID" />
       <JFXTextField fx:id="idTextField" layoutX="87.0" layoutY="366.0" prefHeight="25.0" prefWidth="165.0" />
    </children>
 </AnchorPane>
