--- a/src/login/AdminView/FXMLRoomForm.fxml
+++ b/src/login/AdminView/FXMLRoomForm.fxml
@@ -1,35 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXDialogLayout?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<JFXDialogLayout maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="381.0" prefWidth="442.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.AdminView.FXMLRoomFormController">
+<AnchorPane prefHeight="349.0" prefWidth="394.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.AdminView.FXMLRoomFormController">
    <children>
-      <AnchorPane prefHeight="349.0" prefWidth="394.0">
-         <children>
-            <Label layoutX="30.0" layoutY="8.0" text="Room ID :" />
-            <Label layoutX="30.0" layoutY="42.0" text="CondoName : " />
-            <Label layoutX="228.0" layoutY="42.0" text="Picture : " />
-            <Label layoutX="233.0" layoutY="82.0" text="Price : " />
-            <Label layoutX="233.0" layoutY="121.0" text="SqMeter : " />
-            <Label layoutX="30.0" layoutY="82.0" text="Bathroom : " />
-            <Label layoutX="30.0" layoutY="121.0" text="Bedroom : " />
-            <TextField fx:id="bathroomTextField" layoutX="108.0" layoutY="78.0" prefHeight="25.0" prefWidth="91.0" />
-            <ComboBox fx:id="condoNameTextField" layoutX="108.0" layoutY="39.0" prefHeight="25.0" prefWidth="91.0" />
-            <TextField fx:id="bedroomTextField" layoutX="108.0" layoutY="117.0" prefHeight="25.0" prefWidth="91.0" />
-            <TextField fx:id="sqMeterTextField" layoutX="288.0" layoutY="117.0" prefHeight="25.0" prefWidth="91.0" />
-            <TextField fx:id="priceTextField" layoutX="288.0" layoutY="78.0" prefHeight="25.0" prefWidth="91.0" />
-            <TextArea fx:id="decriptionTextArea" layoutX="30.0" layoutY="177.0" prefHeight="138.0" prefWidth="349.0" />
-            <Label layoutX="30.0" layoutY="147.0" text="Description" />
-            <JFXButton fx:id="backButton" layoutX="299.0" layoutY="36.0" onAction="#backButtonOnClick" style="-fx-background-color: grey;" text="Browse" textFill="WHITE" />
-            <JFXButton fx:id="actionButton" layoutX="299.0" layoutY="328.0" onAction="#actionSQLButton" style="-fx-background-color: brown;" text="update/add" textFill="WHITE" />
-         </children>
-      </AnchorPane>
+      <Label layoutX="30.0" layoutY="8.0" text="Room ID :" />
+      <Label layoutX="30.0" layoutY="42.0" text="CondoName : " />
+      <Label layoutX="228.0" layoutY="42.0" text="Picture : " />
+      <Label layoutX="233.0" layoutY="82.0" text="Price : " />
+      <Label layoutX="233.0" layoutY="121.0" text="SqMeter : " />
+      <Label layoutX="30.0" layoutY="82.0" text="Bathroom : " />
+      <Label layoutX="30.0" layoutY="121.0" text="Bedroom : " />
+      <TextField fx:id="bathroomTextField" layoutX="108.0" layoutY="78.0" prefHeight="25.0" prefWidth="91.0" />
+      <ComboBox fx:id="condoNameTextField" layoutX="108.0" layoutY="39.0" prefHeight="25.0" prefWidth="91.0" />
+      <TextField fx:id="bedroomTextField" layoutX="108.0" layoutY="117.0" prefHeight="25.0" prefWidth="91.0" />
+      <TextField fx:id="sqMeterTextField" layoutX="288.0" layoutY="117.0" prefHeight="25.0" prefWidth="91.0" />
+      <TextField fx:id="priceTextField" layoutX="288.0" layoutY="78.0" prefHeight="25.0" prefWidth="91.0" />
+      <TextArea fx:id="decriptionTextArea" layoutX="30.0" layoutY="177.0" prefHeight="138.0" prefWidth="349.0" />
+      <Label layoutX="30.0" layoutY="147.0" text="Description" />
+      <JFXButton fx:id="backButton" layoutX="299.0" layoutY="36.0" onAction="#backButtonOnClick" style="-fx-background-color: grey;" text="Browse" textFill="WHITE" />
+      <JFXButton fx:id="actionButton" layoutX="299.0" layoutY="328.0" onAction="#actionSQLButton" style="-fx-background-color: brown;" text="update/add" textFill="WHITE" />
    </children>
-</JFXDialogLayout>
+</AnchorPane>
