--- a/src/login/AdminView/FXMLDataManipulation.fxml
+++ b/src/login/AdminView/FXMLDataManipulation.fxml
@@ -3,17 +3,15 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="412.0" prefWidth="519.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.AdminView.FXMLDataManipulationController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="427.0" prefWidth="519.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login.AdminView.FXMLDataManipulationController">
    <children>
       <JFXTabPane layoutY="1.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="365.0" prefWidth="520.0" styleClass="jfx-tab-pane" stylesheets="@../GraphicCss.css">
          <tabs>
@@ -71,39 +69,32 @@
                   </ScrollPane>
                </content>
             </Tab>
-            <Tab fx:id="updateStaff" text="UpdateCondo">
-               <content>
-                  <ScrollPane fx:id="viewChartManageScrollPane" prefHeight="200.0" prefWidth="200.0">
-                     <content>
-                        <AnchorPane prefHeight="353.0" prefWidth="473.0">
-                           <children>
-                              <Label layoutX="30.0" layoutY="8.0" text="Room ID :" />
-                              <Label layoutX="30.0" layoutY="42.0" text="CondoName : " />
-                              <Label layoutX="228.0" layoutY="42.0" text="Picture : " />
-                              <Label layoutX="233.0" layoutY="82.0" text="Price : " />
-                              <Label layoutX="233.0" layoutY="121.0" text="SqMeter : " />
-                              <Label layoutX="30.0" layoutY="82.0" text="Bathroom : " />
-                              <Label layoutX="30.0" layoutY="121.0" text="Bedroom : " />
-                              <TextField fx:id="bathroomTextField" layoutX="108.0" layoutY="78.0" prefHeight="25.0" prefWidth="91.0" />
-                              <ComboBox fx:id="condoNameTextField" layoutX="108.0" layoutY="39.0" prefHeight="25.0" prefWidth="91.0" />
-                              <TextField fx:id="bedroomTextField" layoutX="108.0" layoutY="117.0" prefHeight="25.0" prefWidth="91.0" />
-                              <TextField fx:id="sqMeterTextField" layoutX="288.0" layoutY="117.0" prefHeight="25.0" prefWidth="91.0" />
-                              <TextField fx:id="priceTextField" layoutX="288.0" layoutY="78.0" prefHeight="25.0" prefWidth="91.0" />
-                              <TextArea fx:id="decriptionTextArea" layoutX="30.0" layoutY="177.0" prefHeight="138.0" prefWidth="349.0" />
-                              <Label layoutX="30.0" layoutY="147.0" text="Description" />
-                              <JFXButton layoutX="299.0" layoutY="36.0" onAction="#backButtonOnClick" style="-fx-background-color: grey;" text="Browse" textFill="WHITE" />
-                              <JFXButton fx:id="actionButton" layoutX="299.0" layoutY="328.0" style="-fx-background-color: brown;" text="update/add" textFill="WHITE" />
-                           </children>
-                        </AnchorPane>
-                     </content></ScrollPane>
-               </content>
+            <Tab onSelectionChanged="#editRoomSelectTab" text="Edit Room">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="269.0" layoutY="103.0" text="Price" />
+                        <Label layoutX="37.0" layoutY="103.0" text="Bathroom" />
+                        <Label layoutX="38.0" layoutY="137.0" text="Bedroom" />
+                        <Label layoutX="269.0" layoutY="137.0" text="SqMeter" />
+                        <TextField fx:id="bedroomField" layoutX="105.0" layoutY="99.0" />
+                        <TextField fx:id="bedroomField" layoutX="105.0" layoutY="133.0" />
+                        <TextField fx:id="priceField" layoutX="323.0" layoutY="99.0" />
+                        <TextField fx:id="sqMeter" layoutX="323.0" layoutY="133.0" />
+                        <Label layoutX="40.0" layoutY="178.0" text="Description" />
+                        <TextField fx:id="decriptionField" layoutX="39.0" layoutY="203.0" prefHeight="113.0" prefWidth="447.0" />
+                        <Label layoutX="278.0" layoutY="62.0" text="Type :" />
+                        <TextField fx:id="typeField" layoutX="323.0" layoutY="58.0" />
+                     </children>
+                  </AnchorPane>
+              </content>
             </Tab>
          </tabs>
       </JFXTabPane>
-      <JFXButton fx:id="insertButton" buttonType="RAISED" layoutX="290.0" layoutY="366.0" onAction="#insertButtonOnClick" style="-fx-background-color: #dd492e;" text="Insert" textFill="WHITE" />
-      <JFXButton fx:id="updateButton" buttonType="RAISED" layoutX="360.0" layoutY="366.0" onAction="#updateButtonOnClick" style="-fx-background-color: #dd492e;" text="Update" textFill="WHITE" />
-      <JFXButton fx:id="deleteButton" buttonType="RAISED" layoutX="432.0" layoutY="366.0" onAction="#deleteButtonOnClick" style="-fx-background-color: #dd492e;" text="Delete" textFill="WHITE" />
-      <Label fx:id="idLabel" layoutX="16.0" layoutY="370.0" prefHeight="17.0" prefWidth="63.0" text="CondoID" />
-      <JFXTextField fx:id="idTextField" layoutX="87.0" layoutY="366.0" prefHeight="25.0" prefWidth="165.0" />
+      <JFXButton fx:id="insertButton" buttonType="RAISED" layoutX="288.0" layoutY="387.0" onAction="#insertButtonOnClick" style="-fx-background-color: #dd492e;" text="Insert" textFill="WHITE" />
+      <JFXButton fx:id="updateButton" buttonType="RAISED" layoutX="358.0" layoutY="387.0" onAction="#updateButtonOnClick" style="-fx-background-color: #dd492e;" text="Update" textFill="WHITE" />
+      <JFXButton fx:id="deleteButton" buttonType="RAISED" layoutX="430.0" layoutY="387.0" onAction="#deleteButtonOnClick" style="-fx-background-color: #dd492e;" text="Delete" textFill="WHITE" />
+      <Label fx:id="idLabel" layoutX="14.0" layoutY="391.0" prefHeight="17.0" prefWidth="63.0" text="CondoID" />
+      <JFXTextField fx:id="idTextField" layoutX="85.0" layoutY="387.0" prefHeight="25.0" prefWidth="165.0" />
    </children>
 </AnchorPane>
